finalize login setup